<resources>
    <string name="app_name">Alerta Sullana</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alerta_sullana">Alerta Sullana</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splashlogo">Alerta Sullana</string>
    <string name="pruebaSplash">PostSplashScreen</string>
    <string name="unete">Únete a la comunidad\nque mantiene una\nSullana segura</string>
    <string name="comenzarString">Comenzar</string>
    <string name="register_google">Registrarse con Google</string>
    <string name="terminos">Al registrarse acepta los términos y condiciones, que incluye \nusar su correo electrónico.</string>
    <string name="inicio">Inicio</string>
    <string name="notificacion">Reporte</string>
    <string name="usuario">Usuario</string>
    <string name="boton_reportar_f">Boton para reportar hecho</string>
    <string name="txt_misReportes">Mis reportes</string>
    <string name="status_connected">Conectado</string>
    <string name="txt_configuraciones">Configuraciones</string>
    <string name="able_enable_notifications">Activar/Desactivar notificaciones</string>
    <string name="txt_salirapp">  Salir de la aplicación</string>
    <string name="imagen_del_usuario">imagen del usuario</string>
    <string name="descripcion_btn_alerta">Botón para tomar foto del reporte</string>
    <string name="descrip_imagenDelito">Aquí se cargará la imagen del delito</string>
    <string name="describe_el_delito">Describe el delito</string>
    <string name="escriba_el_delito">Escriba el delito</string>
    <string name="descripcion_btn_ubicacion">Boton para ir a ubicacion en tiempo real\n</string>
    <string name="reportar_delito">Reportar delito</string>
    <string name="datos_extra">Se guardarán datos de ubicación, tiempo y usuario</string>

    <string name="channel_name">Alertas de Reportes</string>
    <string name="channel_description">Notificaciones sobre nuevos reportes en Alerta Sullana</string>
    <string name="ver_delito_en_el_mapa">Ver delito en el mapa</string>
    <string name="bienvenidos_a_alerta_sullana">Bienvenidos a Alerta Sullana</string>
    <string name="ingresa_tu_correo">Ingresa tu correo electrónico</string>
    <string name="ingresa_tu_contrasena">Ingresa tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="o">o</string>
    <string name="registrate_en_nuestra_aplicacion">Registrate en nuestra aplicación</string>
    <string name="recurso_app">Recurso de la app</string>

    <string name="oauthclient">820869985928-1v3a6te12rd23du241hrs0asp2gl7pv6.apps.googleusercontent.com</string>
    <string name="cargando">Cargando...</string>
    <string name="inicioBN">Inicio</string>
    <string name="reportes">Reportes</string>
    <string name="usuarioBN">Usuario</string>
</resources>