<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Oscurito"
    tools:context=".features.auth.register.RegisterFragment">

    <View
        android:id="@+id/logoR"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/alertasullanavector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTituloRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoR"
        android:text="@string/registrate_en_nuestra_aplicacion"
        android:textAlignment="center"
        android:theme="@style/TituloChicahoH4"/>

    <!--TEXTEDITS-->

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloRegister"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/ingresa_tu_correo"
        android:textColorHint="@color/design_default_color_on_primary"
        android:alpha="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreoR"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/ingresa_tu_contrasena"
        android:textColorHint="@color/design_default_color_on_primary"
        android:alpha="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordR"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/registrarse"
        android:theme="@style/TextNormalRubikBotonH5"
        android:textColor="@color/md_theme_light_onBackground"
        android:textAlignment="center"
        app:backgroundTint="@color/botonesintro" />

    <TextView
        android:id="@+id/terminosYcondiciones"
        android:background="@color/Oscurito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/terminos"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:alpha="0.6"/>


</androidx.constraintlayout.widget.ConstraintLayout>