<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Oscurito"
    tools:context=".features.auth.presentation.PresentationFragment">

    <ImageView
        android:id="@+id/fullLayout"
        android:contentDescription="@string/recurso_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/iglesiamatriz"/>

    <View
        android:id="@+id/gradientLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/iglesiamatr"/>

    <View
        android:id="@+id/logoCorner"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/alertasullanavector"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textUnete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnComenzar"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/unete"
        android:theme="@style/TituloChicahoH4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComenzar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="64dp"
        android:text="@string/comenzarString"
        android:textColor="@color/md_theme_light_onBackground"
        android:theme="@style/TextNormalRubikBotonH5"
        android:textAlignment="center"
        app:backgroundTint="@color/botonesintro" />


</androidx.constraintlayout.widget.ConstraintLayout>